--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -7,11 +7,10 @@ pre, code {
   font-family: $font-family-monospace;
   color: #525252;
   font-size: 0.9em;
-  background-color: #f8f8f8;
-  font-size: ($font-size-base - 3);
+  background-color: rgba(27,31,35,0.05);
 }
 code {
-  color: #e96900;
+  color: $code-color;
   border-radius: 2px;
   white-space: nowrap;
 }
