--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Google font import
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,400,400italic|Roboto+Mono);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin);
 
 // Custom variables
 
@@ -27,7 +27,7 @@ $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root:             15px !default;
+$font-size-root:             16px !default;
 
 $font-size-base:             $font-size-root !default;
 $font-size-lg:               $font-size-root * 1.25 !default;
@@ -52,15 +52,16 @@ $hr-border-width:             $border-width;
 //
 
 $text-color:       rgba(0, 0, 0, 0.87) !default;
-$background-color: #f5f5f5;
+$background-color: #2D7DD2;
 
 $white:            #fff;
-$primary:          #42b983;
-$secondary:        #8d7edc;
+$primary:          #2D7DD2;
+$secondary:        #2D7DD2;
 $success:          #65e892;
 $danger:           #f83e4b;
-$warning:          #F5A623;
+$warning:          #ED254E;
 $info:             #09ABF6;
+$code-color:       rgba(0, 0, 0, 0.87);
 
 // Tables
 $table-border-color: #d0d0d0 !default;
