--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -8,9 +8,11 @@ pre, code {
   color: #525252;
   font-size: 0.9em;
   background-color: rgba(27,31,35,0.05);
+  //font-size: ($font-size-base - 3);
 }
 code {
-  color: $code-color;
+  color: #5E5B52;
+  font-weight: 600;
   border-radius: 2px;
   white-space: nowrap;
 }
